Bug 422090 - KIOFuse does not resolve remove symlinks to work locally
Summary: KIOFuse does not resolve remove symlinks to work locally
Status: RESOLVED FIXED
Alias: None
Product: kiofuse
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: a.saoutkin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-05-26 10:31 UTC by Kai Uwe Broulik
Modified: 2020-12-23 13:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2020-05-26 10:31:47 UTC
I have a symlink "WebStuff" on my server pointing to /var/www. When I access the folder through sftp://foo/bar/WebStuff, I can browse it just fine.
Dolphin's places panel tries to CD into /run/user/foo/kio-fuse/sftp/foo/bar/WebStuff and fails because the symlink points to /var/www which locally doesn't exist.


STEPS TO REPRODUCE
1. Go to sftp://whatever in Dolphin
2. Have a symlink there pointing to a folder somewhere else
3. Try accessing this symlink through KIOFuse

OBSERVED RESULT
The symlink is exposed verbatim and points to a local folder

EXPECTED RESULT
The symlink is rewritten to work similar to how it does when browsing it in Dolphin

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.18.90
KDE Frameworks Version: 5.71.0
Qt Version: 5.14.2

ADDITIONAL INFORMATION
KIO-Fuse git master
Comment 1 Fabian Vogt 2020-08-01 12:57:33 UTC
Git commit 1fedbb198f9cf785108babc673d377dc169a745e by Fabian Vogt.
Committed on 01/08/2020 at 12:53.
Pushed by fvogt into branch 'master'.

Reimplement mounting in a different way

Instead of always creating an origin node at the authority level
and creating all path elements as directories, only create everything
up to the origin when mounting. Everything beyond that is created
on-demand when an application triggers readdir or lookup.

Some ioslaves like tar don't support access at the root level
(tar:/// doesn't exist), so for mounting those it has to traverse the
URL upward until a valid origin is found.

As mountUrl no longer creates all nodes to resolve the full URL, it
returns a string in the callback now instead of a node.

As there is no longer a concept of a protocol node, it was replaced
with a plain DirNode instead.

remoteUrl had to be fixed to deal with m_overrideUrl having a non-empty
(or '/') path, it didn't add '/' before.

The algorithm of localPathToRemoteUrl was changed to not need all path
elements as nodes. It stops traversing once an origin was found.
This means it behaves incorrectly/unexpectedly with nested origins.
Related: bug 422091

M  +34   -2    DESIGN
M  +2    -2    kiofuseservice.cpp
M  +194  -170  kiofusevfs.cpp
M  +9    -4    kiofusevfs.h
M  +1    -9    tests/fileopstest.cpp

https://invent.kde.org/system/kio-fuse/commit/1fedbb198f9cf785108babc673d377dc169a745e
Comment 2 Bug Janitor Service 2020-08-12 12:24:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/kio-fuse/-/merge_requests/35
Comment 3 Fabian Vogt 2020-08-23 17:25:27 UTC
(In reply to Bug Janitor Service from comment #2)
> A possibly relevant merge request was started @
> https://invent.kde.org/system/kio-fuse/-/merge_requests/35

^ is ready now, can you give it a test run to make sure that it covers your use case as well?
Comment 4 Bug Janitor Service 2020-09-07 04:33:09 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 5 Bug Janitor Service 2020-09-22 04:33:14 UTC
This bug has been in NEEDSINFO status with no change for at least
30 days. The bug is now closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

Thank you for helping us make KDE software even better for everyone!
Comment 6 a.saoutkin 2020-09-28 19:27:45 UTC
MR has not been merged yet and Kai has not confirmed if it works, I'll let the MR when pushed to master close this bug.
Comment 7 a.saoutkin 2020-12-23 13:11:05 UTC
Git commit 2fb5da8143b1306351b2b4b6e001e8e9263ee110 by Alexander Saoutkin, on behalf of Fabian Vogt.
Committed on 23/12/2020 at 13:10.
Pushed by asaoutkin into branch 'master'.

Rewrite absolute symlinks to stay inside their origin

Absolute symlinks have a different meaning when accessed though the regular
filesystem, they don't anchor to the mounted URL anymore:
sftp://server/tmp/symlink -> /home/user/
/mnt/sftp/server/tmp/symlink -> /home/user/
Rewrite absolute symlinks when reading or writing them to keep the target
consistent:
/mnt/sftp/server/tmp/symlink -> /mnt/sftp/server/home/user/

It is necessary that KIOFuseVFS is aware of the mountpoint now, to be able to
deal with absolute paths. This is not ideal as it doesn't account for bind
mounts or symlinks.

Use readlink in fileopstest to get the raw link target instead of an absolute
path.

M  +72   -19   kiofusevfs.cpp
M  +6    -0    kiofusevfs.h
M  +71   -4    tests/fileopstest.cpp

https://invent.kde.org/system/kio-fuse/commit/2fb5da8143b1306351b2b4b6e001e8e9263ee110